feat: add get session info from IDSESSION
