# controllers/Sesiones.js
@@ -12,3 +12,13 @@ module.exports.getAllSessions = function getAllSessions (req, res, next) {
       utils.writeJson(res, response);
     });
 };
+
+module.exports.getSession = function getSession (req, res, next, idSession) {
+  Sesiones.getSession(idSession)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
